[build-system]
requires = ["setuptools>=62.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Bertopic clustering"
dynamic = ["version"]
authors = [
    { name = "Sergio Frayle P\u00e9rez" },
]
readme = "README.md"
requires-python = ">=3.11"

[tool.bumpversion]
current_version = "0.0.0"
commit = false
tag = false

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = false
check_untyped_defs = true
exclude = '^data\/*'

[[tool.mypy.overrides]]
module = ["transformers", "mlflow", "bertopic"]
ignore_missing_imports = true

[tool.ruff]
exclude = [".git", "__pycache__", ".venv", "venv", "src/data_processing/stop_words.py"]
line-length = 88
indent-width = 4
src = ["src/"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]


[tool.setuptools]
include-package-data = false
